# 42sh

./: "on  .Makefile.swo  .Makefile.swp  .error.swp  .gitignore  .main.c.swp  .swp  1  2  3  3HEfE__CTF  42sh  42sh.ld_puGQew  5  53  5463  :q  CMakeLists.txt  Makefile  Makefile~  README.md  a.out  author  cat  dasdas  define.h  dsa  err  error  executable  fi  fildes  file  files2  good  h.sh  help  ici  log  logger  (+17 more)
.deps/: insert_one_line.d  main.d  shell.d
.deps/alias/: alias.Td  alias.d  init_rc.d  tools.d
.deps/binary_tree/: binary_tree.d
.deps/builtins/: env.d  parse_builtins.d
.deps/cores/: exit.d  insert_one_line.d  main.d  shell.d  var_return.d
.deps/env/: add_environment.d  add_list_env.d  env_table.d  global_save_env.d  init_env.d  initialise_environment.d  manage_env.d  my_getenv.d  remove_environment.d  split.d  usage_environment.d
.deps/error_function/: bip.d  puterror.d  usage_builtins.d  usage_builtins2.d  usage_builtins3.d
.deps/execution/: check_if_builtins.d  executing_node.Td  executing_node.d  my_fork.d
.deps/execution/builtins_functions/: basic_help.d  builtin_alias.d  builtin_cd.d  builtin_data.d  builtin_echo.d  builtin_env.d  builtin_exit.d  builtin_hash.d  builtin_help.d  builtin_history.d  builtin_jobs.d  builtin_kill.d  builtin_kill2.d  builtin_refresh.d  builtin_setenv.d  builtin_suspend.d  builtin_switch.d  builtin_switch2.d  builtin_tools.d  builtin_unsetenv.d
.deps/execution/executing_function/: op_ampersand.d  op_and_if.d  op_dgreat.d  op_dless.d  op_execution.d  op_great.d  op_great_and.Td  op_great_and.d  op_less.d  op_less_and.d  op_lessgreat.d  op_or_if.d  op_pipeline.d  op_separator.d  op_string.d
.deps/execution/tools/: alias_tools.d  check_path.d  check_tree_path.d  close_fd.d  do_heredoc.d  do_string.d  find_executing_node.d  get_process.d  get_real_env.d  looking_for_path.d  manage_pipe.d  manage_use.d  new_jobs.d  potential_option.d  redirection_tools.d  tools_heredoc.d
.deps/hash/: built_in_hash.d  get_str_from_hash.d  hash_board.d  hash_value.d  init_hash.d  table_hash.d
.deps/history/: built_in_history.d  copy_cmd.d  gbl_save_history.d  get_str_from_history.d  init_history.d  make_list_hist.d  next_history.d  previous_history.d  reset_history.d  write_history.d
.deps/jobs_control/: get_real_jobs.d  jobs_control.d  modify_status_jobs.d  my_execve.d  my_wait.d  print_process.d  set_process.d  status_signals.d
.deps/memdel_struct/: memdel_completion.d  memdel_jobs.d  memdel_outstanding.d  memdel_parsing.d  memdel_read.d  memdel_search_history.d  memdel_tree.d
.deps/parsing/: parsing.d
.deps/parsing/expanding/: alias.d  argv.d  argv_tools.d  escape.d  special.d  split.d  split_tools.d  tilde.d  (+2 more)
.deps/read/: check_cmd.d  finish_read_std.d  first_cmd.d  gbl_save_read.d  get_len_prompt.d  init_prompt.d  init_struct_for_read.d  key_arrow.d  key_clear.d  key_delete.d  key_delete_here.d  key_enter.d  key_eof.d  key_home_end.d  key_interrupt.d  key_print.d  key_shift.d  key_tabulation.d  key_undo.d  last_cmd.d  my_prompt.d  my_put.d  print_struct.d  prompt.d  read_stdin.d  restore_cursor.d  special_key.d
.deps/signal/: ft_signal.d
.deps/term/: init_fd.d  init_term.d  keep_term_struct.d  set_term.d
incs/: .define.h.swp  .sh.h.swp  .struct.h.swp  builtins.h  define.h  define.h~  enum.h  sh.h  sh.h~  struct.h  struct2.h
leaks/: run_leaks.sh
libs/libft/: Makefile
libs/printf/: Makefile  README.md
shellscript/builtin_history/: 42sh
srcs/: .main.c.swp  insertOneLine.c  insert_one_line.c  log_info_bug_dnt_care_of_norminette_bitch.c  main.c  shell.c
srcs/alias/: alias.c  init_rc.c  tools.c
srcs/binary_tree/: binary_tree.c
srcs/builtins/: data_builtin.c  env.c  ft_cd.c  ft_setenv.c  parse_builtins.c  utils.c
srcs/cores/: exit.c  insert_one_line.c  main.c  shell.c  var_return.c
srcs/env/: .add_list_env.c.swp  addListEnv.c  add_environment.c  add_list_env.c  env_table.c  globalSaveEnv.c  global_save_env.c  initEnv.c  init_env.c  initialise_environment.c  manage_env.c  myGetenv.c  my_getenv.c  remove_environment.c  split.c  usage_environment.c
srcs/error_function/: bip.c  create_fildes.c  error_env.c  puterror.c  usage_builtins.c  usage_builtins2.c  usage_builtins3.c
srcs/execution/: check_if_builtins.c  check_if_builtins.c~  executing_node.c  my_fork.c
srcs/hash/: built_in_hash.c  get_str_from_hash.c  hashBoard.c  hashValue.c  hash_board.c  hash_value.c  init_hash.c  table_hash.c  write_hash.c
srcs/history/: built_in_history.c  copyCmd.c  copy_cmd.c  gblSaveHistory.c  gbl_save_history.c  get_str_from_history.c  initHistory.c  init_history.c  makeListHist.c  make_list_hist.c  nextHistory.c  next_history.c  previousHistory.c  previous_history.c  reset_history.c  write_history.c
srcs/jobs_control/: .jobs_control.c.swp  builtins_jobs.c  get_real_jobs.c  jobs_control.c  modify_status_jobs.c  my_execve.c  my_wait.c  print_process.c  set_process.c  status_signals.c
srcs/memdel_struct/: memdelCompletion.c  memdelRead.c  memdel_completion.c  memdel_jobs.c  memdel_outstanding.c  memdel_parsing.c  memdel_read.c  memdel_search_history.c  memdel_tree.c
srcs/parsing/: commands.c  last.c  lexing.c  lib.c  operaters.c  parsing.c  redirections.c  stds.c  tools.c
srcs/read/: .key_arrow.c.swp  .key_enter.c.swp  .print_struct.c.swp  .read_stdin.c.swo  .read_stdin.c.swp  .special_key.c.swo  .special_key.c.swp  arrow.c  checkCmd.c  check_cmd.c  finishReadStd.c  finish_read_std.c  firstCmd.c  first_cmd.c  gblSaveRead.c  gbl_save_read.c  get_len_prompt.c  init_prompt.c  init_struct_for_read.c  keep_buffer.c  keyArrow.c  keyClear.c  keyDelete.c  keyDeleteHere.c  keyEnter.c  keyEof.c  keyHomeEnd.c  keyInterrupt.c  keyPrint.c  keyShift.c  keyTabulation.c  key_arrow.c  key_clear.c  key_del_buff.c  key_delete.c  key_delete_here.c  key_enter.c  key_eof.c  key_home_end.c  key_interrupt.c  (+15 more)
srcs/signal/: ftSignal.c  ft_signal.c
srcs/term/: .init_fd.c.swp  .set_term.c.swo  .set_term.c.swp  initFd.c  initTerm.c  init_fd.c  init_term.c  keepTermStruct.c  keep_term_struct.c  setTerm.c  set_term.c
test/: .42sh_history
(+528 files in other folders)
