cmake_minimum_required(VERSION 3.8)
project(42sh)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        incs/define.h
        incs/sh.h
        incs/struct.h
        libs/libft/incs/get_next_line.h
        libs/libft/incs/libft.h
        libs/libft/srcs/ft_atoi.c
        libs/libft/srcs/ft_atoi_base.c
        libs/libft/srcs/ft_atoui.c
        libs/libft/srcs/ft_bzero.c
        libs/libft/srcs/ft_chrchar.c
        libs/libft/srcs/ft_convert_base.c
        libs/libft/srcs/ft_convert_ubase.c
        libs/libft/srcs/ft_countchar.c
        libs/libft/srcs/ft_debug.c
        libs/libft/srcs/ft_double_delete.c
        libs/libft/srcs/ft_filetostr.c
        libs/libft/srcs/ft_firstchar.c
        libs/libft/srcs/ft_ftoa.c
        libs/libft/srcs/ft_isalnum.c
        libs/libft/srcs/ft_isalpha.c
        libs/libft/srcs/ft_isascii.c
        libs/libft/srcs/ft_iscrlf.c
        libs/libft/srcs/ft_isdigit.c
        libs/libft/srcs/ft_islower.c
        libs/libft/srcs/ft_isprint.c
        libs/libft/srcs/ft_isupper.c
        libs/libft/srcs/ft_itoa.c
        libs/libft/srcs/ft_itounssigned.c
        libs/libft/srcs/ft_lltoa.c
        libs/libft/srcs/ft_ltoa.c
        libs/libft/srcs/ft_memalloc.c
        libs/libft/srcs/ft_memccpy.c
        libs/libft/srcs/ft_memchr.c
        libs/libft/srcs/ft_memcmp.c
        libs/libft/srcs/ft_memcpy.c
        libs/libft/srcs/ft_memdel.c
        libs/libft/srcs/ft_memdel_tab.c
        libs/libft/srcs/ft_memmove.c
        libs/libft/srcs/ft_memset.c
        libs/libft/srcs/ft_nbrlen.c
        libs/libft/srcs/ft_newcat.c
        libs/libft/srcs/ft_putchar.c
        libs/libft/srcs/ft_putchar_fd.c
        libs/libft/srcs/ft_putendl.c
        libs/libft/srcs/ft_putendl_fd.c
        libs/libft/srcs/ft_putnbr.c
        libs/libft/srcs/ft_putnbr_fd.c
        libs/libft/srcs/ft_putstr.c
        libs/libft/srcs/ft_putstr_fd.c
        libs/libft/srcs/ft_putstrtab.c
        libs/libft/srcs/ft_putstrtab_fd.c
        libs/libft/srcs/ft_realloc.c
        libs/libft/srcs/ft_recursive_power.c
        libs/libft/srcs/ft_split.c
        libs/libft/srcs/ft_stoa.c
        libs/libft/srcs/ft_str_charnout.c
        libs/libft/srcs/ft_str_charnoutrev.c
        libs/libft/srcs/ft_str_charout.c
        libs/libft/srcs/ft_str_to_tab.c
        libs/libft/srcs/ft_str_tolower.c
        libs/libft/srcs/ft_str_toupper.c
        libs/libft/srcs/ft_strcat.c
        libs/libft/srcs/ft_strchr.c
        libs/libft/srcs/ft_strclr.c
        libs/libft/srcs/ft_strcmp.c
        libs/libft/srcs/ft_strcpy.c
        libs/libft/srcs/ft_strdel.c
        libs/libft/srcs/ft_strdup.c
        libs/libft/srcs/ft_strequ.c
        libs/libft/srcs/ft_striter.c
        libs/libft/srcs/ft_striteri.c
        libs/libft/srcs/ft_strjoin.c
        libs/libft/srcs/ft_strlcat.c
        libs/libft/srcs/ft_strlen.c
        libs/libft/srcs/ft_strmap.c
        libs/libft/srcs/ft_strmapi.c
        libs/libft/srcs/ft_strncat.c
        libs/libft/srcs/ft_strncmp.c
        libs/libft/srcs/ft_strncpy.c
        libs/libft/srcs/ft_strnequ.c
        libs/libft/srcs/ft_strnew.c
        libs/libft/srcs/ft_strnstr.c
        libs/libft/srcs/ft_strrchr.c
        libs/libft/srcs/ft_strrev.c
        libs/libft/srcs/ft_strsplit.c
        libs/libft/srcs/ft_strstr.c
        libs/libft/srcs/ft_strsub.c
        libs/libft/srcs/ft_strtrim.c
        libs/libft/srcs/ft_tablen.c
        libs/libft/srcs/ft_tolower.c
        libs/libft/srcs/ft_toupper.c
        libs/libft/srcs/ft_uitoa.c
        libs/libft/srcs/ft_ulltoa.c
        libs/libft/srcs/ft_ultoa.c
        libs/libft/srcs/ft_ustoa.c
        libs/libft/srcs/ft_ustrncmp.c
        libs/libft/srcs/get_next_line.c
        libs/libft/srcs/my_gnl.c
        libs/logger/incs/logger.h
        libs/logger/incs/logger_utils.h
        libs/printf/incs/ft_printf.h
        libs/printf/srcs/clean_struct.c
        libs/printf/srcs/clear_flag.c
        libs/printf/srcs/converted.c
        libs/printf/srcs/cut_str.c
        libs/printf/srcs/detect_arg.c
        libs/printf/srcs/detect_pre.c
        libs/printf/srcs/fill.c
        libs/printf/srcs/fill_char.c
        libs/printf/srcs/fill_hash.c
        libs/printf/srcs/fill_last.c
        libs/printf/srcs/fill_pointer.c
        libs/printf/srcs/fill_sign.c
        libs/printf/srcs/fill_str.c
        libs/printf/srcs/fill_tank.c
        libs/printf/srcs/ft_printf.c
        libs/printf/srcs/if_color.c
        libs/printf/srcs/part_base.c
        libs/printf/srcs/part_dec.c
        libs/printf/srcs/part_extra.c
        libs/printf/srcs/part_nu.c
        libs/printf/srcs/part_str.c
        libs/printf/srcs/part_unisgned.c
        libs/printf/srcs/printf_part.c
        srcs/cores/insert_one_line.c
        srcs/cores/main.c
        srcs/cores/shell.c
        srcs/cores/var_return.c
        srcs/env/add_environment.c
        srcs/env/init_env.c
        srcs/env/initialise_environment.c
        srcs/env/my_getenv.c
        srcs/env/remove_environment.c
        srcs/error_function/bip.c
        srcs/execution/builtins_functions/builtin_hash.c
        srcs/execution/builtins_functions/builtin_history.c
        srcs/execution/builtins_functions/builtin_jobs.c
        srcs/execution/builtins_functions/builtin_switch.c
        srcs/execution/check_if_builtins.c
        srcs/hash/built_in_hash.c
        srcs/hash/get_str_from_hash.c
        srcs/hash/hash_board.c
        srcs/hash/hash_value.c
        srcs/hash/table_hash.c
        srcs/history/built_in_history.c
        srcs/history/copy_cmd.c
        srcs/history/gbl_save_history.c
        srcs/history/get_str_from_history.c
        srcs/history/init_history.c
        srcs/history/make_list_hist.c
        srcs/history/next_history.c
        srcs/history/previous_history.c
        srcs/history/reset_history.c
        srcs/history/write_history.c
        srcs/jobs_control/jobs_control.c
        srcs/jobs_control/modify_status_jobs.c
        srcs/jobs_control/my_execve.c
        srcs/jobs_control/my_wait.c
        srcs/jobs_control/set_process.c
        srcs/memdel_struct/memdel_completion.c
        srcs/memdel_struct/memdel_outstanding.c
        srcs/memdel_struct/memdel_read.c
        srcs/memdel_struct/memdel_search_history.c
        srcs/parsing/commands.c
        srcs/parsing/last.c
        srcs/parsing/lexing.c
        srcs/parsing/lib.c
        srcs/parsing/operaters.c
        srcs/parsing/parsing.c
        srcs/parsing/redirections.c
        srcs/parsing/stds.c
        srcs/parsing/tools.c
        srcs/read/completion/check_binary_path.c
        srcs/read/completion/color_completion.c
        srcs/read/completion/complete_binary.c
        srcs/read/completion/complete_path.c
        srcs/read/completion/completion.c
        srcs/read/completion/continue_completion.c
        srcs/read/completion/create_comp.c
        srcs/read/completion/init_completion.c
        srcs/read/completion/init_files.c
        srcs/read/completion/init_tab.c
        srcs/read/completion/move_horizontal.c
        srcs/read/completion/move_vertical.c
        srcs/read/completion/my_togo.c
        srcs/read/completion/print_tab.c
        srcs/read/completion/update_index.c
        srcs/read/key_/key_arrow.c
        srcs/read/key_/key_clear.c
        srcs/read/key_/key_del_buff.c
        srcs/read/key_/key_delete.c
        srcs/read/key_/key_delete_here.c
        srcs/read/key_/key_downcase_word.c
        srcs/read/key_/key_enter.c
        srcs/read/key_/key_eof.c
        srcs/read/key_/key_home_end.c
        srcs/read/key_/key_interrupt.c
        srcs/read/key_/key_kill_k.c
        srcs/read/key_/key_kill_prev_word.c
        srcs/read/key_/key_kill_word.c
        srcs/read/key_/key_print.c
        srcs/read/key_/key_reprint.c
        srcs/read/key_/key_search_history.c
        srcs/read/key_/key_shift.c
        srcs/read/key_/key_tabulation.c
        srcs/read/key_/key_undo.c
        srcs/read/key_/key_upcase_word.c
        srcs/read/key_/key_yank.c
        srcs/read/other_read/check_cmd.c
        srcs/read/other_read/finish_read_std.c
        srcs/read/other_read/first_cmd.c
        srcs/read/other_read/gbl_save_read.c
        srcs/read/other_read/get_len_prompt.c
        srcs/read/other_read/init_prompt.c
        srcs/read/other_read/init_struct_for_read.c
        srcs/read/other_read/keep_buffer.c
        srcs/read/other_read/last_cmd.c
        srcs/read/other_read/my_prompt.c
        srcs/read/other_read/my_put.c
        srcs/read/other_read/print_struct.c
        srcs/read/other_read/prompt.c
        srcs/read/other_read/read_stdin.c
        srcs/read/other_read/restore_cursor.c
        srcs/read/other_read/signal_reception.c
        srcs/read/outstanding/add_outstanding.c
        srcs/read/outstanding/get_os_pointer.c
        srcs/read/search_history/compare_history.c
        srcs/read/search_history/compare_list.c
        srcs/read/search_history/first_history.c
        srcs/read/search_history/init_research.c
        srcs/read/search_history/last_result.c
        srcs/read/search_history/manage_cursor_prompt.c
        srcs/read/search_history/print_struct_history.c
        srcs/signal/ft_signal.c
        srcs/term/init_fd.c
        srcs/term/init_term.c
        srcs/term/keep_term_struct.c
        srcs/term/set_term.c
        srcs/execution/builtins_functions/data_builtin.c
        srcs/execution/builtins_functions/error.c
        srcs/execution/builtins_functions/ft_cd.c
        srcs/execution/builtins_functions/ft_echo
        srcs/execution/builtins_functions/ft_setenv.c
        srcs/execution/builtins_functions/ft_unsetenv.c
        srcs/execution/builtins_functions/refresh_varenv.c
        srcs/execution/builtins_functions/utils.c
        srcs/log_info_bug_dnt_care_of_norminette_bitch.c
        srcs/read/key_/key_refresh.c
        srcs/jobs_control/status_signals.c
        srcs/execution/builtins_functions/builtin_kill.c
        libs/libft/srcs/ft_strisdigit.c
        libs/libft/srcs/ft_strisalpha.c
        srcs/execution/builtins_functions/builtin_env.c
        srcs/cores/exit.c
        srcs/execution/builtins_functions/builtin_exit.c
        srcs/error_function/usage_builtins.c
        srcs/execution/builtins_functions/builtin_help.c
        srcs/read/key_/key_capitalize_word.c
        libs/libft/srcs/ft_isread.c
        srcs/execution/builtins_functions/builtin_suspend.c
        srcs/read/other_read/read_gates.c
        srcs/binary_tree/binary_tree.c
        srcs/execution/executing_node.c
        srcs/execution/my_fork.c
        srcs/execution/executing_function/op_execution.c
        srcs/execution/executing_function/op_separator.c
        srcs/execution/tools/get_real_env.c
        srcs/execution/executing_function/op_pipeline.c
        srcs/execution/tools/manage_pipe.c
        srcs/execution/tools/new_jobs.c
        srcs/execution/executing_function/op_ampersand.c
        srcs/execution/executing_function/op_and_if.c
        srcs/execution/executing_function/op_or_if.c
        srcs/read/other_read/my_tgetnum.c
        srcs/read/other_read/refresh_command.c
        srcs/execution/tools/check_tree_path.c
        srcs/read/other_read/cursor_column.c
        srcs/execution/executing_function/op_less.c srcs/execution/executing_function/op_dless.c srcs/execution/tools/fildes_previous.c)

include_directories(incs)
include_directories(libs/libft/incs)
include_directories(libs/logger/incs)
include_directories(libs/printf/incs)

add_executable(42sh ${SOURCE_FILES})