cmake_minimum_required(VERSION 3.8)
project(42sh_final)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        incs/define.h
        incs/enum.h
        incs/sh.h
        incs/struct.h
        libs/libft/incs/get_next_line.h
        libs/libft/incs/libft.h
        libs/libft/srcs/ft_atoi.c
        libs/libft/srcs/ft_atoi_base.c
        libs/libft/srcs/ft_atoui.c
        libs/libft/srcs/ft_bzero.c
        libs/libft/srcs/ft_chrchar.c
        libs/libft/srcs/ft_convert_base.c
        libs/libft/srcs/ft_convert_ubase.c
        libs/libft/srcs/ft_countchar.c
        libs/libft/srcs/ft_debug.c
        libs/libft/srcs/ft_double_delete.c
        libs/libft/srcs/ft_filetostr.c
        libs/libft/srcs/ft_findchr.c
        libs/libft/srcs/ft_firstchar.c
        libs/libft/srcs/ft_ftoa.c
        libs/libft/srcs/ft_imaxtoa.c
        libs/libft/srcs/ft_insrt_to_str.c
        libs/libft/srcs/ft_isalnum.c
        libs/libft/srcs/ft_isalpha.c
        libs/libft/srcs/ft_isascii.c
        libs/libft/srcs/ft_iscrlf.c
        libs/libft/srcs/ft_isdigit.c
        libs/libft/srcs/ft_islower.c
        libs/libft/srcs/ft_isprint.c
        libs/libft/srcs/ft_isread.c
        libs/libft/srcs/ft_isupper.c
        libs/libft/srcs/ft_itoa.c
        libs/libft/srcs/ft_itounssigned.c
        libs/libft/srcs/ft_lltoa.c
        libs/libft/srcs/ft_ltoa.c
        libs/libft/srcs/ft_memalloc.c
        libs/libft/srcs/ft_memccpy.c
        libs/libft/srcs/ft_memchr.c
        libs/libft/srcs/ft_memcmp.c
        libs/libft/srcs/ft_memcpy.c
        libs/libft/srcs/ft_memdel.c
        libs/libft/srcs/ft_memdel_tab.c
        libs/libft/srcs/ft_memmove.c
        libs/libft/srcs/ft_memset.c
        libs/libft/srcs/ft_nbrlen.c
        libs/libft/srcs/ft_newcat.c
        libs/libft/srcs/ft_putchar.c
        libs/libft/srcs/ft_putchar_fd.c
        libs/libft/srcs/ft_putendl.c
        libs/libft/srcs/ft_putendl_fd.c
        libs/libft/srcs/ft_putnbr.c
        libs/libft/srcs/ft_putnbr_fd.c
        libs/libft/srcs/ft_putstr.c
        libs/libft/srcs/ft_putstr_fd.c
        libs/libft/srcs/ft_putstrtab.c
        libs/libft/srcs/ft_putstrtab_fd.c
        libs/libft/srcs/ft_realloc.c
        libs/libft/srcs/ft_recalloc.c
        libs/libft/srcs/ft_recursive_power.c
        libs/libft/srcs/ft_split.c
        libs/libft/srcs/ft_stoa.c
        libs/libft/srcs/ft_str_charnout.c
        libs/libft/srcs/ft_str_charnoutrev.c
        libs/libft/srcs/ft_str_charout.c
        libs/libft/srcs/ft_str_to_tab.c
        libs/libft/srcs/ft_str_tolower.c
        libs/libft/srcs/ft_str_toupper.c
        libs/libft/srcs/ft_strcat.c
        libs/libft/srcs/ft_strchr.c
        libs/libft/srcs/ft_strclr.c
        libs/libft/srcs/ft_strcmp.c
        libs/libft/srcs/ft_strcpy.c
        libs/libft/srcs/ft_strdel.c
        libs/libft/srcs/ft_strdup.c
        libs/libft/srcs/ft_strequ.c
        libs/libft/srcs/ft_strisalpha.c
        libs/libft/srcs/ft_strisdigit.c
        libs/libft/srcs/ft_striter.c
        libs/libft/srcs/ft_striteri.c
        libs/libft/srcs/ft_strjoin.c
        libs/libft/srcs/ft_strlcat.c
        libs/libft/srcs/ft_strlen.c
        libs/libft/srcs/ft_strmap.c
        libs/libft/srcs/ft_strmapi.c
        libs/libft/srcs/ft_strncat.c
        libs/libft/srcs/ft_strncmp.c
        libs/libft/srcs/ft_strncpy.c
        libs/libft/srcs/ft_strndup.c
        libs/libft/srcs/ft_strnequ.c
        libs/libft/srcs/ft_strnew.c
        libs/libft/srcs/ft_strnstr.c
        libs/libft/srcs/ft_strrchr.c
        libs/libft/srcs/ft_strrev.c
        libs/libft/srcs/ft_strsplit.c
        libs/libft/srcs/ft_strstr.c
        libs/libft/srcs/ft_strsub.c
        libs/libft/srcs/ft_strtrim.c
        libs/libft/srcs/ft_tablen.c
        libs/libft/srcs/ft_tolower.c
        libs/libft/srcs/ft_toupper.c
        libs/libft/srcs/ft_uimaxtoa_base.c
        libs/libft/srcs/ft_uitoa.c
        libs/libft/srcs/ft_ulltoa.c
        libs/libft/srcs/ft_ultoa.c
        libs/libft/srcs/ft_ustoa.c
        libs/libft/srcs/ft_ustrncmp.c
        libs/libft/srcs/get_next_line.c
        libs/libft/srcs/my_gnl.c
        libs/logger/incs/logger.h
        libs/logger/incs/logger_utils.h
        libs/logger/srcs/display/logger_debug.c
        libs/logger/srcs/display/logger_error.c
        libs/logger/srcs/display/logger_fatal.c
        libs/logger/srcs/display/logger_info.c
        libs/logger/srcs/display/logger_success.c
        libs/logger/srcs/display/logger_trace.c
        libs/logger/srcs/display/logger_warn.c
        libs/logger/srcs/logger/logger_close.c
        libs/logger/srcs/logger/logger_init.c
        libs/logger/srcs/utils/logger_get_time.c
        libs/logger/srcs/utils/logger_init_open_file.c
        libs/printf/incs/libft.h
        libs/printf/incs/libftprintf.h
        libs/printf/srcs/libft/ft_atoi.c
        libs/printf/srcs/libft/ft_bzero.c
        libs/printf/srcs/libft/ft_countwords.c
        libs/printf/srcs/libft/ft_findchr.c
        libs/printf/srcs/libft/ft_free_map.c
        libs/printf/srcs/libft/ft_free_rows.c
        libs/printf/srcs/libft/ft_imaxtoa.c
        libs/printf/srcs/libft/ft_insrt_to_str.c
        libs/printf/srcs/libft/ft_is_sort.c
        libs/printf/srcs/libft/ft_isalnum.c
        libs/printf/srcs/libft/ft_isalpha.c
        libs/printf/srcs/libft/ft_isascii.c
        libs/printf/srcs/libft/ft_isdigit.c
        libs/printf/srcs/libft/ft_isinf.c
        libs/printf/srcs/libft/ft_isnan.c
        libs/printf/srcs/libft/ft_isprint.c
        libs/printf/srcs/libft/ft_itoa.c
        libs/printf/srcs/libft/ft_itoa_base.c
        libs/printf/srcs/libft/ft_lstadd.c
        libs/printf/srcs/libft/ft_lstdel.c
        libs/printf/srcs/libft/ft_lstdelnode.c
        libs/printf/srcs/libft/ft_lstdelone.c
        libs/printf/srcs/libft/ft_lstiter.c
        libs/printf/srcs/libft/ft_lstmap.c
        libs/printf/srcs/libft/ft_lstnew.c
        libs/printf/srcs/libft/ft_memalloc.c
        libs/printf/srcs/libft/ft_memccpy.c
        libs/printf/srcs/libft/ft_memchr.c
        libs/printf/srcs/libft/ft_memcmp.c
        libs/printf/srcs/libft/ft_memcpy.c
        libs/printf/srcs/libft/ft_memdel.c
        libs/printf/srcs/libft/ft_memmove.c
        libs/printf/srcs/libft/ft_memset.c
        libs/printf/srcs/libft/ft_printlst.c
        libs/printf/srcs/libft/ft_putchar.c
        libs/printf/srcs/libft/ft_putchar_fd.c
        libs/printf/srcs/libft/ft_putendl.c
        libs/printf/srcs/libft/ft_putendl_fd.c
        libs/printf/srcs/libft/ft_putnbr.c
        libs/printf/srcs/libft/ft_putnbr_fd.c
        libs/printf/srcs/libft/ft_putstr.c
        libs/printf/srcs/libft/ft_putstr_fd.c
        libs/printf/srcs/libft/ft_range.c
        libs/printf/srcs/libft/ft_realloc.c
        libs/printf/srcs/libft/ft_recalloc.c
        libs/printf/srcs/libft/ft_strcat.c
        libs/printf/srcs/libft/ft_strchr.c
        libs/printf/srcs/libft/ft_strclr.c
        libs/printf/srcs/libft/ft_strcmp.c
        libs/printf/srcs/libft/ft_strcpy.c
        libs/printf/srcs/libft/ft_strdel.c
        libs/printf/srcs/libft/ft_strdup.c
        libs/printf/srcs/libft/ft_strequ.c
        libs/printf/srcs/libft/ft_striter.c
        libs/printf/srcs/libft/ft_striteri.c
        libs/printf/srcs/libft/ft_strjoin.c
        libs/printf/srcs/libft/ft_strlcat.c
        libs/printf/srcs/libft/ft_strlen.c
        libs/printf/srcs/libft/ft_strmap.c
        libs/printf/srcs/libft/ft_strmapi.c
        libs/printf/srcs/libft/ft_strncat.c
        libs/printf/srcs/libft/ft_strncmp.c
        libs/printf/srcs/libft/ft_strncpy.c
        libs/printf/srcs/libft/ft_strndup.c
        libs/printf/srcs/libft/ft_strnequ.c
        libs/printf/srcs/libft/ft_strnew.c
        libs/printf/srcs/libft/ft_strnstr.c
        libs/printf/srcs/libft/ft_strrchr.c
        libs/printf/srcs/libft/ft_strrev.c
        libs/printf/srcs/libft/ft_strsplit.c
        libs/printf/srcs/libft/ft_strstr.c
        libs/printf/srcs/libft/ft_strsub.c
        libs/printf/srcs/libft/ft_strtrim.c
        libs/printf/srcs/libft/ft_swap.c
        libs/printf/srcs/libft/ft_tolower.c
        libs/printf/srcs/libft/ft_toupper.c
        libs/printf/srcs/libft/ft_uimaxtoa_base.c
        libs/printf/srcs/ft_chr_conv.c
        libs/printf/srcs/ft_float_conv.c
        libs/printf/srcs/ft_fmt_parse.c
        libs/printf/srcs/ft_handle_spec.c
        libs/printf/srcs/ft_num_conv.c
        libs/printf/srcs/ft_pfbonus.c
        libs/printf/srcs/ft_pfhandle.c
        libs/printf/srcs/ft_printf.c
        libs/printf/srcs/ft_str_conv.c
        libs/printf/srcs/ft_vector.c
        libs/printf/srcs/ft_wstr_conv.c
        libs/printf/srcs/ft_xou_conv.c
        srcs/binary_tree/binary_tree.c
        srcs/cores/exit.c
        srcs/cores/insert_one_line.c
        srcs/cores/main.c
        srcs/cores/shell.c
        srcs/cores/var_return.c
        srcs/env/add_environment.c
        srcs/env/init_env.c
        srcs/env/initialise_environment.c
        srcs/env/my_getenv.c
        srcs/env/remove_environment.c
        srcs/error_function/bip.c
        srcs/error_function/usage_builtins.c
        srcs/error_function/usage_builtins2.c
        srcs/execution/builtins_functions/basic_help.c
        srcs/execution/builtins_functions/builtin_cd.c
        srcs/execution/builtins_functions/builtin_data.c
        srcs/execution/builtins_functions/builtin_echo.c
        srcs/execution/builtins_functions/builtin_env.c
        srcs/execution/builtins_functions/builtin_exit.c
        srcs/execution/builtins_functions/builtin_hash.c
        srcs/execution/builtins_functions/builtin_help.c
        srcs/execution/builtins_functions/builtin_history.c
        srcs/execution/builtins_functions/builtin_jobs.c
        srcs/execution/builtins_functions/builtin_kill.c
        srcs/execution/builtins_functions/builtin_kill2.c
        srcs/execution/builtins_functions/builtin_refresh.c
        srcs/execution/builtins_functions/builtin_setenv.c
        srcs/execution/builtins_functions/builtin_suspend.c
        srcs/execution/builtins_functions/builtin_switch.c
        srcs/execution/builtins_functions/builtin_tools.c
        srcs/execution/builtins_functions/builtin_unsetenv.c
        srcs/execution/executing_function/op_ampersand.c
        srcs/execution/executing_function/op_and_if.c
        srcs/execution/executing_function/op_dgreat.c
        srcs/execution/executing_function/op_dless.c
        srcs/execution/executing_function/op_execution.c
        srcs/execution/executing_function/op_great.c
        srcs/execution/executing_function/op_great_and.c
        srcs/execution/executing_function/op_less.c
        srcs/execution/executing_function/op_or_if.c
        srcs/execution/executing_function/op_pipeline.c
        srcs/execution/executing_function/op_separator.c
        srcs/execution/tools/check_path.c
        srcs/execution/tools/check_tree_path.c
        srcs/execution/tools/do_heredoc.c
        srcs/execution/tools/find_executing_node.c
        srcs/execution/tools/get_process.c
        srcs/execution/tools/get_real_env.c
        srcs/execution/tools/looking_for_path.c
        srcs/execution/tools/manage_pipe.c
        srcs/execution/tools/new_jobs.c
        srcs/execution/tools/potential_option.c
        srcs/execution/tools/tools_heredoc.c
        srcs/execution/check_if_builtins.c
        srcs/execution/executing_node.c
        srcs/execution/my_fork.c
        srcs/hash/built_in_hash.c
        srcs/hash/get_str_from_hash.c
        srcs/hash/hash_board.c
        srcs/hash/hash_value.c
        srcs/hash/table_hash.c
        srcs/history/built_in_history.c
        srcs/history/copy_cmd.c
        srcs/history/gbl_save_history.c
        srcs/history/get_str_from_history.c
        srcs/history/init_history.c
        srcs/history/make_list_hist.c
        srcs/history/next_history.c
        srcs/history/previous_history.c
        srcs/history/reset_history.c
        srcs/history/write_history.c
        srcs/jobs_control/jobs_control.c
        srcs/jobs_control/modify_status_jobs.c
        srcs/jobs_control/my_execve.c
        srcs/jobs_control/my_wait.c
        srcs/jobs_control/print_process.c
        srcs/jobs_control/set_process.c
        srcs/jobs_control/status_signals.c
        srcs/memdel_struct/memdel_completion.c
        srcs/memdel_struct/memdel_jobs.c
        srcs/memdel_struct/memdel_outstanding.c
        srcs/memdel_struct/memdel_read.c
        srcs/memdel_struct/memdel_search_history.c
        srcs/memdel_struct/memdel_tree.c
        srcs/parsing/expanding/argv.c
        srcs/parsing/expanding/argv_tools.c
        srcs/parsing/expanding/escape.c
        srcs/parsing/expanding/special.c
        srcs/parsing/expanding/split.c
        srcs/parsing/expanding/split_tools.c
        srcs/parsing/expanding/tilde.c
        srcs/parsing/expanding/tools.c
        srcs/parsing/expanding/variable.c
        srcs/parsing/lexing/lexer.c
        srcs/parsing/lexing/recognition.c
        srcs/parsing/lexing/regular_tokenisation.c
        srcs/parsing/lexing/special_tokenisation.c
        srcs/parsing/parsing/parsing.c
        srcs/parsing/tools/error.c
        srcs/parsing/tools/list.c
        srcs/parsing/parsing.c
        srcs/read/completion/check_binary_path.c
        srcs/read/completion/color_completion.c
        srcs/read/completion/complete_binary.c
        srcs/read/completion/complete_path.c
        srcs/read/completion/completion.c
        srcs/read/completion/continue_completion.c
        srcs/read/completion/create_comp.c
        srcs/read/completion/init_completion.c
        srcs/read/completion/init_files.c
        srcs/read/completion/init_tab.c
        srcs/read/completion/move_horizontal.c
        srcs/read/completion/move_vertical.c
        srcs/read/completion/my_togo.c
        srcs/read/completion/print_tab.c
        srcs/read/completion/update_index.c
        srcs/read/key_/key_arrow.c
        srcs/read/key_/key_capitalize_word.c
        srcs/read/key_/key_clear.c
        srcs/read/key_/key_del_buff.c
        srcs/read/key_/key_delete.c
        srcs/read/key_/key_delete_here.c
        srcs/read/key_/key_downcase_word.c
        srcs/read/key_/key_enter.c
        srcs/read/key_/key_eof.c
        srcs/read/key_/key_home_end.c
        srcs/read/key_/key_interrupt.c
        srcs/read/key_/key_kill_k.c
        srcs/read/key_/key_kill_prev_word.c
        srcs/read/key_/key_kill_word.c
        srcs/read/key_/key_print.c
        srcs/read/key_/key_refresh.c
        srcs/read/key_/key_reprint.c
        srcs/read/key_/key_search_history.c
        srcs/read/key_/key_shift.c
        srcs/read/key_/key_tabulation.c
        srcs/read/key_/key_undo.c
        srcs/read/key_/key_upcase_word.c
        srcs/read/key_/key_yank.c
        srcs/read/other_read/check_cmd.c
        srcs/read/other_read/cursor_column.c
        srcs/read/other_read/finish_read_std.c
        srcs/read/other_read/first_cmd.c
        srcs/read/other_read/gbl_save_read.c
        srcs/read/other_read/get_len_prompt.c
        srcs/read/other_read/init_prompt.c
        srcs/read/other_read/init_struct_for_read.c
        srcs/read/other_read/keep_buffer.c
        srcs/read/other_read/last_cmd.c
        srcs/read/other_read/my_prompt.c
        srcs/read/other_read/my_put.c
        srcs/read/other_read/my_tgetnum.c
        srcs/read/other_read/print_struct.c
        srcs/read/other_read/prompt.c
        srcs/read/other_read/read_gates.c
        srcs/read/other_read/read_stdin.c
        srcs/read/other_read/refresh_command.c
        srcs/read/other_read/restore_cursor.c
        srcs/read/other_read/signal_reception.c
        srcs/read/outstanding/add_outstanding.c
        srcs/read/outstanding/get_os_pointer.c
        srcs/read/search_history/compare_history.c
        srcs/read/search_history/compare_list.c
        srcs/read/search_history/first_history.c
        srcs/read/search_history/init_research.c
        srcs/read/search_history/last_result.c
        srcs/read/search_history/manage_cursor_prompt.c
        srcs/read/search_history/print_struct_history.c
        srcs/signal/ft_signal.c
        srcs/term/init_fd.c
        srcs/term/init_term.c
        srcs/term/keep_term_struct.c
        srcs/term/set_term.c)

include_directories(incs)
include_directories(libs/libft/incs)
include_directories(libs/logger/incs)
include_directories(libs/printf/incs)

add_executable(42sh_final ${SOURCE_FILES})